--- a/less/_working.less
+++ b/less/_working.less
@@ -13,12 +13,8 @@
     .make-row;
     ul {
         .make-xs-column(6);
-        .make-sm-column(5);
         margin-top: 5px;
         margin-bottom: 10px;
-        &:first-of-type {
-            .make-sm-column-offset(1);
-        }
     }
     li {
         margin-bottom: .75em;
